# agb_ib_employe

./: pyproject.toml
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
src/: main.py
src/core/: config.py  router.py  schemas.py
src/core/models/: __init__.py  base.py  db_helper.py
src/templates/: addnew.html  base.html  index.html
